# illumiterm

./: AUTHOR  Makefile.am  README.md  autogen.sh  configure.ac  illumiterm.desktop.in
src/: Makefile  Makefile.am  Makefile.in  illumiterm  illumiterm.c
